Fix arrow manual style.

--- a/frontend/themes/my-theme/styles.css
+++ b/frontend/themes/my-theme/styles.css
@@ -12,7 +12,7 @@
 
 #arrow-manual {
   color: #6A8D6D;
-  font-family: "Bookman Old Style";
+  font-family: "Bookman Old Style", serif;
   font-weight: bolder;
   font-size: x-large;
 }
