Fix arrow manual style.

--- a/frontend/themes/my-theme/styles.css
+++ b/frontend/themes/my-theme/styles.css
@@ -10,7 +10,7 @@
   max-width: 250px;
 }
 
-#arrow-manual {
+.arrow-manual {
   color: #6A8D6D;
   font-family: "Bookman Old Style", serif;
   font-weight: bolder;
