--- a/frontend/themes/my-theme/styles.css
+++ b/frontend/themes/my-theme/styles.css
@@ -10,13 +10,6 @@
   max-width: 250px;
 }
 
-.arrow-manual {
-  color: #6A8D6D;
-  font-family: "Bookman Old Style", serif;
-  font-weight: bolder;
-  font-size: x-large;
-}
-
 body {
   background-color: #FDF8F0;
 }
@@ -26,6 +19,13 @@ h1 {
   color: #FDF8F0;
   font-family: "Bookman Old Style";
   padding: 16px;
+}
+
+span.arrow-manual {
+  color: #6A8D6D;
+  font-family: "Bookman Old Style", serif;
+  font-weight: bolder;
+  font-size: x-large;
 }
 
 vaadin-button {
